feat: update comment
