# internal/dto/comment.go
@@ -6,3 +6,8 @@ type CreateCommentRequest struct {
 	Title     string  `json:"title" binding:"required"`
 	Body      string  `json:"body" binding:"required"`
 }
+
+type UpdateCommentRequest struct {
+	Title string `json:"title"`
+	Body  string `json:"body"`
+}
